import java.util.Date;

public interface ExamKind {
    Date getDate();
}
